tests/success/simple_array.tig
let
    type arr = array of string
    var a := arr[10] of "output\n"
in
    print(a[0]);
    a[1] := "new output\n";
    print(a[1])
end
