tests/fail/static_variable_incompatibles_type.tig
let
    var a : string := "20"
    var b : int := 1
in
    b = a;
    b := "a";
    a := 1
end
